plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'kr.co.koscom.pantheon'
version = '0.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    runtimeOnly 'com.h2database:h2'
    testRuntimeOnly 'com.h2database:h2'
    implementation 'org.projectlombok:lombok'
    testImplementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.slf4j:slf4j-api:2.0.17'

    implementation 'com.baomidou:mybatis-plus-spring-boot3-starter:3.5.12'
    implementation 'com.baomidou:mybatis-plus-jsqlparser:3.5.12'
    implementation 'com.baomidou:dynamic-datasource-spring-boot3-starter:4.3.1'
    implementation 'com.github.gavlyukovskiy:datasource-proxy-spring-boot-starter:1.11.0'
    implementation 'com.alibaba.fastjson2:fastjson2:2.0.57'
    testImplementation 'com.alibaba.fastjson2:fastjson2:2.0.57'
    implementation 'commons-beanutils:commons-beanutils:1.11.0'
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation 'org.apache.commons:commons-text:1.13.1'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'


}

tasks.named('test') {
    useJUnitPlatform()
}
